# ipa-cli

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vitest.config.ts
.claude/rules/: bench.md  cli.md  core.md  obsidian.md  testing-build.md
bench/: FINDINGS.md  PLAN-e2e-expansion.md  README.md  run.mjs
bench/lib/: baseline.mjs  judge.mjs  responder.mjs  runner.mjs  sandbox.mjs  schema.mjs  transcript.mjs
bench/results/: baseline.jsonl  history.jsonl
bench/scenarios/: a-recognition.mjs  b-read.mjs  c-write.mjs  d-robustness.mjs  e-authoring.mjs  f-migration.mjs  (+1 more)
docs/: README.md  legacy-refactor-subcommands.md  legacy-validator-rule-map.md
examples/: README.md  testset.example.json
scripts/: README.md  build-obsidian.mjs  build.mjs  install.sh  lint.mjs  smoke.mjs
tests/: test_api_surface.py  test_bm25.py  test_builtin_channels.py  test_builtin_rules.py  test_config_loader.py  test_convention_loader.py  test_engine_cli.py  test_engine_loss.py  test_engine_runner.py  test_examples.py  test_formatter_engine.py  test_fourth_extension_cli.py  test_legacy_surface_snapshot.py  test_mapping_loader.py  test_markdown_parser.py  test_plugins.py  test_runtime_refactor.py  test_runtime_search.py  test_runtime_validator_view.py  test_runtime_view.py  test_search_engine.py  test_search_loader.py  test_semantic_accessors.py  test_tune.py  test_tune_cli.py  test_tune_e2e.py  test_tune_log_cli.py  test_tune_loss.py  test_tune_results.py  test_tune_runner.py  test_vault_loader.py
(+495 files in other folders)
