[project]
name = "ipa-cli"
version = "0.1.0"
description = "IPA vault CLI — search, traversal, validator, refactor, tune"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "ruamel.yaml>=0.18",
    "PyYAML>=6.0",
    "optuna>=3.6",
    "markdown-it-py>=4.0.0",
]

[project.scripts]
ipa = "ipa_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ipa_cli"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
